Lundi après le café

--- a/angular/mon-premier-projet/src/app/mon-super-composant/mon-super-composant.component.html
+++ b/angular/mon-premier-projet/src/app/mon-super-composant/mon-super-composant.component.html
@@ -24,7 +24,8 @@
     start 
 </button>
 <input #foire type="text" [(ngModel)]="inputValue" (keyup.enter)="onKeyUp(foire)"/>
-{{inputValue | bingo }}
+{{inputValue | bingo : 'Lucien' : 'Raymond'}}
+{{inputValue | summary  }}
 
 
 
