Fin de l'histoire du services
Fin du goûter donc

--- a/angular/forms/src/app/app.component.html
+++ b/angular/forms/src/app/app.component.html
@@ -1,2 +1,3 @@
 <!-- <app-template-form></app-template-form> -->
-<app-reactiv-form></app-reactiv-form>
+<!-- <app-reactiv-form></app-reactiv-form> -->
+<app-exercice-form></app-exercice-form>
